# oChre

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.bat  compile.sh  hero.cpp  hero.h  install_linux.sh  install_windows.bat  main.cpp  makefile  myconfig  package_deb.sh
doc/: doxyfile  oChreConfig
doc/dot/: attack.dot
doc/html/: annotated.html  classHero-members.html  classHero.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  hero_8h_source.html  index.html
doc/html/search/: all_0.js  searchdata.js
doc/latex/: annotated.tex  classHero.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  index.tex  refman.tex
include/: consumable.h  creature.h  draconic.h  dwarf.h  elf.h  equippable.h  gnome.h  goblin.h  human.h  item.h  orc.h  party.h  rat.h  thing.h  troll.h
src/: config.h.in  consumable.cpp  consumable.h  creature.cpp  creature.h  creature.hpp  dwarf.cpp  equipable.cpp  equipable.h  equippable.cpp  goblin.cpp  hero.cpp  hero.h  human.cpp  human.h  item.cpp  item.h  main.cpp  party.cpp  party.h  party.hpp  rat.cpp  thing.h
src/tests/: creature.cpp  party.cpp
